@@ -1,70 +1,67 @@
 package org.example;
 
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import java.time.Instant;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
+@Service
+@RequiredArgsConstructor
 public class ShopService {
     private final OrderRepo orderRepo;
     private final ProductRepo productRepo;
 
-    public ShopService(OrderRepo orderRepo, ProductRepo productRepo) {
-        this.orderRepo = orderRepo;
-        this.productRepo = productRepo;
-    }
 
     public List<Order> getOrdersByStatus(OrderStatus orderStatus) {
-        return orderRepo.getOrders().stream()
-                .filter(order -> order.orderStatus() == orderStatus)
-                .collect(Collectors.toList());
+        return orderRepo.findByStatus(orderStatus);
     }
 
     public Order placeOrder(String id,
                             List<OrderItem> items,
                             OrderStatus orderStatus) {
         // validate each product exists
-        items.forEach(item ->
-                productRepo.getProductById(item.product().id())
-                        .orElseThrow(() -> new ProductNotFoundException(item.product().id()))
-        );
+        items.forEach(item -> {
+            // ensure item.product is present in the database
+            String productId = item.getProduct().getId();
+            productRepo.findById(productId)
+                    .orElseThrow(() -> new ProductNotFoundException(productId));
+        });
 
+        // create and save a new Order document
         Order newOrder = new Order(
                 id,
                 items,
                 orderStatus,
-                Instant.now()           // stamp with now
+                Instant.now()
         );
-        orderRepo.addOrder(newOrder);
-        return newOrder;
+        return orderRepo.save(newOrder);
     }
+
 
     public Order updateOrderStatus(String orderId, OrderStatus newStatus) {
-        Order existing = orderRepo.getOrder(orderId);
+        Order existing = orderRepo.findById(orderId)
+                .orElseThrow(() -> new NoSuchElementException("Order not found: " + orderId));
         Order updated = existing.withOrderStatus(newStatus);
-
-        orderRepo.removeOrder(existing);
-        orderRepo.addOrder(updated);
-
-        return updated;
+        return orderRepo.save(updated);
     }
+
 
     public Order updateOrderItemQuantity(String orderId,
                                          String productId,
                                          int newQuantity) {
-        Order existing = orderRepo.getOrder(orderId);  // throws if missing
+        Order existing = orderRepo.findById(orderId)
+                .orElseThrow(() -> new NoSuchElementException("Order not found: " + orderId));
 
-        List<OrderItem> updatedItems = existing.items().stream()
-                .map(item ->
-                        item.product().id().equals(productId)
-                                ? new OrderItem(item.product(), newQuantity)
-                                : item
-                )
-                .collect(Collectors.toList());
+        List<OrderItem> updatedItems = existing.getItems().stream()
+                .map(item -> item.getProduct().getId().equals(productId)
+                        ? item.withQuantity(newQuantity)
+                        : item)
+                .toList();
 
         boolean found = updatedItems.stream()
-                .anyMatch(item -> item.product().id().equals(productId));
+                .anyMatch(item -> item.getProduct().getId().equals(productId));
 
         if (!found) {
             throw new NoSuchElementException(
@@ -72,10 +69,7 @@ public class ShopService {
             );
         }
 
-        Order updated = existing.withItems(updatedItems);
-        orderRepo.removeOrder(existing);
-        orderRepo.addOrder(updated);
-        return updated;
+        Order updatedOrder = existing.withItems(updatedItems);
+        return orderRepo.save(updatedOrder);
     }
-
 }
